--- a/TODO
+++ b/TODO
@@ -1,15 +1,25 @@
 
+------------------------
+
 Save checksum (String.hashcode() on json export) for member-data
 to external file. Load and check against new member-data to
 decide if an updated member-data reply needs to be generated.
+
+------------------------
 
 Save checksum (of the raw post data?) for member data requiring 
 attention.  Load and check against new decide if an updated
 post needs to be made.
 
+------------------------
+
 Add audit/validation phase for user_fields.
 
+------------------------
+
 Audit/validate that the topic ids for posting are valid.
+
+------------------------
 
 Reverse engineer recipes for:
 	- Updating a post.
@@ -19,6 +29,16 @@ Reverse engineer recipes for:
 
 	Documention at https://docs.discourse.org/
 
-Automate deleting of replaced posts,
-or update them in place.
+------------------------
+
+Automate deleting of replaced posts, or update them in place.
+
+------------------------
+
+If/when we have a secure web server that we control,
+implement a Discourse WebHook instead of polling periodically.
+Not clear yet, but it may give us all the information we
+need directly. If not, it will at least replace the polling
+with demand driven fetches.
+------------------------
 
