Adding Main tests using simulator.

--- a/TODO
+++ b/TODO
@@ -1,5 +1,8 @@
 ------------------------
 
+Implement upload
+------------------------
+
 Audit/validate that the topic ids for posting are valid.
 
 ------------------------
