--- a/TODO
+++ b/TODO
@@ -38,6 +38,7 @@ cron-ish jobs on demand.
 
 Add checking for restaurant template.
 
-
 Audit where posts are going to and that category access
 is as expected.
+
+When displaying, adjust post number to take deleted posts into account
