--- a/TODO
+++ b/TODO
@@ -61,3 +61,6 @@ Update user names to audit case-insensitive
 Audits for ReplaceThisBy in new control block
 
 Make posts in get driver messages match the summary order.
+
+Reject one-kitchen sheets from driver request
+and driver requests from one kitchen...
