--- a/TODO
+++ b/TODO
@@ -59,3 +59,11 @@ Add a heart beat post update, to show the back end running
 Update user names to audit case-insensitive
 
 Audits for ReplaceThisBy in new control block
+
+Replace scripts with logic running full time in JVM.
+Store/fetch artifacts to/from Discourse instead of AWS file system.
+
+Standardize logging
+	- File push actions
+	- Message post actions
+	- Error messages
